z-index fix

--- a/ad-site/style/main.css
+++ b/ad-site/style/main.css
@@ -248,7 +248,7 @@ html, body, .ad-content {
 }
 
 .btn.download {
-	z-index: 1
+	z-index: 2
 
 	-webkit-align-self: stretch;
 	-moz-align-self: stretch;
@@ -281,6 +281,7 @@ html, body, .ad-content {
 }
 
 .panel.social {
+	z-index: 2;
 	background: #454142;
 	background: -moz-linear-gradient(92deg, #000 13%, #454142 80%);
 	background: -webkit-linear-gradient(92deg,  #000 13%, #454142 80%);
